[package]
name = "blind-auction"
version = "0.1.0"
description = "Blind auction using Inco Lightning for private bids"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "blind_auction"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
inco-lightning = { version = "0.1.4", features = ["cpi"] }
